--- a/sections/dev__footer.liquid
+++ b/sections/dev__footer.liquid
@@ -1,26 +1,30 @@
-{{ 'dev__footer.css' | asset_url | stylesheet_tag }}
-
-<footer class="footer">
+<footer class="footer {{ section.settings.footer__main }}">
   {% for block in section.blocks %}
     <div class="footer__section">
-      <input type="checkbox" id="footer-toggle-{{ forloop.index }}" class="footer__toggle-checkbox">
-      <label for="footer-toggle-{{ forloop.index }}" class="footer__toggle">{{ block.settings.heading }}</label>
+      <input
+        type="checkbox"
+        id="footer-toggle-{{ forloop.index }}"
+        class="footer__toggle-checkbox {{ block.settings.footer__toggle-checkbox }}"
+      >
+      <label for="footer-toggle-{{ forloop.index }}" class="footer__toggle {{ block.settings.footer__toggle }}">
+        {{- block.settings.heading -}}
+      </label>
       <ul class="footer__links-list">
         {% for link in linklists[block.settings.menu].links %}
           <li class="footer__link-item">
-            <a href="{{ link.url }}" class="footer__link">{{ link.title }}</a>
+            <a href="{{ link.url }}" class="footer__link {{ block.settings.footer__link }}">{{ link.title }}</a>
           </li>
         {% endfor %}
       </ul>
     </div>
   {% endfor %}
   <div class="footer__section footer__section--newsletter">
-    <p class="footer__title footer__title-common">
+    <p class="footer__title footer__title--common {{ section.settings.footer__title }}">
       {{ section.settings.newsletter_heading }}
     </p>
-    <form class="footer__form">
-      <input type="email" placeholder="{{ section.settings.email_placeholder }}" class="footer__input">
-      <button type="submit" class="footer__button">{{ section.settings.button_text }}</button>
+    <form class="footer__form {{ section.settings.footer__form }}">
+      <input type="email" placeholder="{{ section.settings.email_placeholder }}" class="footer__input {{ section.settings.footer__input }}">
+      <button type="submit" class="footer__button {{ section.settings.footer__button }}">{{ section.settings.button_text }}</button>
     </form>
   </div>
 </footer>
@@ -44,6 +48,46 @@
           "type": "link_list",
           "id": "menu",
           "label": "Menu"
+        },
+        {
+          "type": "header",
+          "content": "Tailwind Styling Classes"
+        },
+        {
+          "type": "textarea",
+          "id": "footer__toggle",
+          "label": "Style Footer Toggle",
+          "default": "text-2xl text-white font-semibold mb-5 tracking-wide r"
+        },
+        {
+          "type": "textarea",
+          "id": "footer__link",
+          "label": "Style Footer Links",
+          "default": "block text-white mb-3 no-underline"
+        },
+        {
+          "type": "textarea",
+          "id": "footer__toggle-checkbox",
+          "label": "Style Footer Toggle Checkbox",
+          "default": " md:inline-block"
+        },
+        {
+          "type": "textarea",
+          "id": "footer__form",
+          "label": "Style Footer Form",
+          "default": "flex gap-4 "
+        },
+        {
+          "type": "textarea",
+          "id": "footer__input",
+          "label": "Style Footer Input",
+          "default": "p-4 border border-none rounded flex-grow-1 "
+        },
+        {
+          "type": "textarea",
+          "id": "footer__button",
+          "label": "Style Footer Button",
+          "default": " bg-purple-600 text-white border-none p-4 rounded cursor-pointer hover bg-purple-700"
         }
       ]
     }
@@ -66,6 +110,22 @@
       "id": "button_text",
       "label": "Button Text",
       "default": "Subscribe"
+    },
+    {
+      "type": "header",
+      "content": "Tailwind Styling Classes"
+    },
+    {
+      "type": "textarea",
+      "id": "footer__main",
+      "label": "Style Footer Section",
+      "default": "bg-purple-800 text-white p-10 flex flex-wrap justify-between md:flex-col md:flex-basis-full md:p-0"
+    },
+    {
+      "type": "textarea",
+      "id": "footer__title",
+      "label": "Style Footer Title",
+      "default": "text-2xl font-semibold text-white mb-5 uppercase tracking-wide md:text-center"
     }
   ],
   "presets": [
