tailwind css html added in logo

--- a/sections/dev__logo-carousel.liquid
+++ b/sections/dev__logo-carousel.liquid
@@ -58,6 +58,12 @@
       "content": "Tailwind Styling Classes"
     },
     {
+        "type": "html",
+        "id": "tailwind_css1",
+        "label": "Tailwind css",
+        "default": "@layer utilities {.pause { animation-play-state: paused;}}"
+    },
+    {
       "type": "textarea",
       "label": "Style Logo Image",
       "id": "logos__image",
