--- a/sections/dev__image-banner.liquid
+++ b/sections/dev__image-banner.liquid
@@ -1,13 +1,16 @@
 <!-- image-banner.liquid -->
 
 <div class="image-banner {{ section.settings.image-banner }}" >
-  {%- assign image_url_width = section.settings.image_url_width -%}
-  {%- assign image_tag_width = section.settings.image_tag_width -%}
-  {% if section.settings.mobile_image %}
-    <div class="image-banner__image-wrapper">
-      {{ section.settings.mobile_image | image_url: width: image_url_width | image_tag: width: image_tag_width }}
-    </div>
-  {% endif %}
+{%- assign image_url_width = section.settings.image_url_width -%}
+{%- assign image_url_height = section.settings.image_url_height -%}
+{%- assign image_tag_styles_class = "testimonial__image " | append: section.settings.image_tag_styles -%}
+
+{% if section.settings.mobile_image %}
+  <div class="image-banner__image-wrapper">
+    {{ section.settings.mobile_image | image_url: width: image_url_width, height: image_url_height | image_tag: class: image_tag_styles_class }}
+  </div>
+{% endif %}
+
 
   <div class="image-banner__text-wrapper {{ section.settings.image-banner__text-wrapper }}">
     <h2 class="image-banner__title {{ section.settings.image-banner__title }}">{{ section.settings.title | escape }}</h2>
@@ -56,9 +59,15 @@
     },
     {
       "type": "text",
-      "id": "image_tag_width",
-      "label": "Image Tag width",
+      "id": "image_url_height",
+      "label": "Image URL height",
       "default": "800"
+    },
+    {
+      "type": "text",
+      "id": "image_tag_styles",
+      "label": "Image Tag Style",
+      "default": "h-[500px] object-cover"
     },
     {
       "type": "header",
