--- a/sections/dev__carousel--two-rows.liquid
+++ b/sections/dev__carousel--two-rows.liquid
@@ -1,24 +1,22 @@
-{{ 'dev__carousel--two-rows.css' | asset_url | stylesheet_tag }}
 <!-- Carousel Container -->
-<div class="carousel">
+<div class="carousel {{ section.settings.carousel }}">
   <!-- Carousel Text -->
-  <div class="carousel__text">
-    <h2 class="carousel__heading">{{ section.settings.heading_text }}</h2>
-    <p class="carousel__subheading">{{ section.settings.subheading_text }}</p>
-    <div class="carousel__cta-container">
-      <a href="{{ section.settings.cta_url }}" class="carousel__cta-link" target="_blank">
+  <div class="carousel__text {{ section.settings.carousel__text }}">
+    <h2 class="carousel__heading {{ section.settings.carousel__heading }}">{{ section.settings.heading_text }}</h2>
+    <p class="carousel__subheading {{ section.settings.carousel__subheading }}">{{ section.settings.subheading_text }}</p>
+    <div class="carousel__cta-container {{ section.settings.carousel__cta-container }}">
         {{- section.settings.cta_text -}}
       </a>
     </div>
   </div>
 
   <!-- Upper Row Carousel -->
-  <div class="carousel__row carousel__row--upper">
+  <div class="carousel__row {{ section.settings.carousel__row }} carousel__row--upper {{ block.settings.carousel__row--upper }}">
     {% for block in section.blocks %}
       {% if block.type == 'upper-image' %}
-        <div class="carousel__cell">
+        <div class="carousel__upper-cell  {{ block.settings.carousel__upper-cell }}">
           <img
-            class="carousel__image"
+            class="carousel__image  {{ section.settings.carousel__image }}"
             src="{{ block.settings.image | image_url: width: 800, height: 800 }}"
             alt="{{ block.settings.image.alt | escape }}"
             loading="eager"
@@ -31,12 +29,12 @@
   </div>
 
   <!-- Lower Row Carousel -->
-  <div class="carousel__row carousel__row--lower">
+  <div class="carousel__row {{ section.settings.carousel__row }} carousel__row--lower {{ block.settings.carousel__row--lower}}">
     {% for block in section.blocks %}
       {% if block.type == 'lower-image' %}
-        <div class="carousel__cell">
+        <div class="carousel__lower-cell  {{ block.settings.carousel__lower-cell }}">
           <img
-            class="carousel__image"
+            class="carousel__image  {{ section.settings.carousel__image }}"
             src="{{ block.settings.image | image_url: width: 800, height: 800 }}"
             alt="{{ block.settings.image.alt | escape }}"
             loading="eager"
@@ -48,6 +46,18 @@
     {% endfor %}
   </div>
 </div>
+
+<style>
+  @keyframes slide-left {
+    from { transform: translateX(100%); }
+    to { transform: translateX(-100%); }
+  }
+  
+  @keyframes slide-right {
+    from { transform: translateX(-100%); }
+    to { transform: translateX(100%); }
+  }
+</style>
 
 {% schema %}
 {
@@ -75,6 +85,62 @@
       "id": "cta_text",
       "label": "CTA Text",
       "default": "@yummygumsvitamins"
+    },
+    {
+      "type": "header",
+      "content": "Stylings"
+    },
+    {
+      "type": "textarea",
+      "id": "carousel",
+      "label": "Carousel Container Styles",
+      "default": "relative pt-[125px] max-md:pt-[100px]"
+    },
+    {
+      "type": "textarea",
+      "id": "carousel__text",
+      "label": "Carousel Text Styles",
+      "default": "text-center absolute top-0 left-0 w-full z-1 p-[10px] bg-white bg-opacity-80"
+    },
+    {
+      "type": "textarea",
+      "id": "carousel__heading",
+      "label": "Heading Styles",
+      "default": "text-5xl font-bold text-purple-700 ml-2 max-md:text-3xl"
+    },
+    {
+      "type": "textarea",
+      "id": "carousel__subheading",
+      "label": "Subheading Styles",
+      "default": "text-3xl font-semibold text-purple-900 ml-2 max-md:text-xl"
+    },
+    {
+      "type": "textarea",
+      "id": "carousel__cta-container",
+      "label": "CTA Container Styles",
+      "default": "flex items-center justify-center gap-[4px]"
+    },
+    {
+      "type": "textarea",
+      "id": "carousel__cta-link",
+      "label": "CTA Link Styles",
+      "default": "inline-block text-purple-900 font-bold rounded-md transition duration-300 hover:bg-gray-300"
+    },
+    {
+      "type": "header",
+      "content": "Cell Styling"
+    },
+    {
+      "type": "textarea",
+      "id": "carousel__row",
+      "label": "Row Styles",
+      "default": "overflow-hidden whitespace-nowrap flex flex-wrap"
+    },
+    {
+      "type": "textarea",
+      "id": "carousel__image",
+      "label": "Image Styles",
+      "default": "w-[150px] h-[150px] object-cover rounded-lg m-[10px]"
     }
   ],
   "blocks": [
@@ -86,6 +152,18 @@
           "type": "image_picker",
           "id": "image",
           "label": "Image for Upper Row"
+        },
+        {
+          "type": "textarea",
+          "id": "carousel__upper-cell",
+          "label": "Upper Cell Styles",
+          "default": "inline-block vertical-align-middle whitespace-normal flex-shrink-0 animate-[slide-left_4s_linear_infinite]"
+        },
+        {
+          "type": "textarea",
+          "id": "carousel__row--upper",
+          "label": "Upper Row Styles",
+          "default": "inline-block align-middle whitespace-normal flex-[0_0_auto]"
         }
       ],
       "limit": 15
@@ -98,6 +176,18 @@
           "type": "image_picker",
           "id": "image",
           "label": "Image for Lower Row"
+        },
+        {
+          "type": "textarea",
+          "id": "carousel__lower-cell",
+          "label": "Lower Cell Styles",
+          "default": "inline-block vertical-align-middle whitespace-normal flex-shrink-0 animate-[slide-right_4s_linear_infinite]"
+        },
+        {
+          "type": "textarea",
+          "id": "carousel__row--lower",
+          "label": "Lower Row Styles",
+          "default": "inline-block align-middle whitespace-normal flex-[0_0_auto]"
         }
       ],
       "limit": 15
