--- a/sections/dev__carousel--two-rows.liquid
+++ b/sections/dev__carousel--two-rows.liquid
@@ -5,24 +5,25 @@
     <h2 class="carousel__heading {{ section.settings.carousel__heading }}">{{ section.settings.heading_text }}</h2>
     <p class="carousel__subheading {{ section.settings.carousel__subheading }}">{{ section.settings.subheading_text }}</p>
     <div class="carousel__cta-container {{ section.settings.carousel__cta-container }}">
+      <a href="{{ section.settings.cta_url }}" class="carousel__cta-link {{ section.settings.carousel__cta-link }}" target="_blank">
         {{- section.settings.cta_text -}}
       </a>
     </div>
   </div>
 
   <!-- Upper Row Carousel -->
+  {%- assign image_url_width = section.settings.image_url_width -%}
+  {%- assign image_url_height = section.settings.image_url_height -%}
   <div class="carousel__row {{ section.settings.carousel__row }} carousel__row--upper {{ block.settings.carousel__row--upper }}">
     {% for block in section.blocks %}
       {% if block.type == 'upper-image' %}
+        {%- assign carousel__image_style = "carousel__image " | append: section.settings.carousel__image -%}
         <div class="carousel__upper-cell  {{ block.settings.carousel__upper-cell }}">
-          <img
-            class="carousel__image  {{ section.settings.carousel__image }}"
-            src="{{ block.settings.image | image_url: width: 800, height: 800 }}"
-            alt="{{ block.settings.image.alt | escape }}"
-            loading="eager"
-            width="800"
-            height="800"
-          >
+            {% if block.settings.image %}
+              {{ block.settings.image | image_url: width: image_url_width, height: image_url_height | image_tag: class: carousel__image_style }}
+            {% else %}
+              {{ 'image' | placeholder_svg_tag }}
+            {% endif %}
         </div>
       {% endif %}
     {% endfor %}
@@ -32,15 +33,13 @@
   <div class="carousel__row {{ section.settings.carousel__row }} carousel__row--lower {{ block.settings.carousel__row--lower}}">
     {% for block in section.blocks %}
       {% if block.type == 'lower-image' %}
+        {%- assign carousel__image_style = "carousel__image " | append: section.settings.carousel__image -%}
         <div class="carousel__lower-cell  {{ block.settings.carousel__lower-cell }}">
-          <img
-            class="carousel__image  {{ section.settings.carousel__image }}"
-            src="{{ block.settings.image | image_url: width: 800, height: 800 }}"
-            alt="{{ block.settings.image.alt | escape }}"
-            loading="eager"
-            width="800"
-            height="800"
-          >
+            {% if block.settings.image %}
+              {{ block.settings.image | image_url: width: image_url_width, height: image_url_height | image_tag: class: carousel__image_style }}
+            {% else %}
+              {{ 'image' | placeholder_svg_tag }}
+            {% endif %}
         </div>
       {% endif %}
     {% endfor %}
@@ -85,6 +84,18 @@
       "id": "cta_text",
       "label": "CTA Text",
       "default": "@yummygumsvitamins"
+    },
+    {
+      "type": "text",
+      "id": "image_url_width",
+      "label": "Image URL width",
+      "default": "800"
+    },
+    {
+      "type": "text",
+      "id": "image_url_height",
+      "label": "Image URL height",
+      "default": "800"
     },
     {
       "type": "header",
