naming convention commit

--- a/sections/dev__carousel--two-rows.liquid
+++ b/sections/dev__carousel--two-rows.liquid
@@ -15,7 +15,7 @@
   {%- assign image_url_width = section.settings.image_url_width -%}
   {%- assign image_url_height = section.settings.image_url_height -%}
   <div class="carousel__row {{ section.settings.carousel__row }}">
-    <div class="carousel__row--upper {{ block.settings.carousel__row--upper }}">
+    <div class="carousel__row_upper {{ block.settings.carousel__row_upper }}">
     {% for block in section.blocks %}
       {% if block.type == 'upper-image' %}
         {%- assign carousel__image_style = "carousel__image " | append: section.settings.carousel__image -%}
@@ -33,7 +33,7 @@
 
   <!-- Lower Row Carousel -->
   <div class="carousel__row {{ section.settings.carousel__row }}">
-    <div class="carousel__row--lower {{ block.settings.carousel__row--lower }}">
+    <div class="carousel__row_lower {{ block.settings.carousel__row_lower }}">
     {% for block in section.blocks %}
       {% if block.type == 'lower-image' %}
         {%- assign carousel__image_style = "carousel__image " | append: section.settings.carousel__image -%}
@@ -176,7 +176,7 @@
         },
         {
           "type": "textarea",
-          "id": "carousel__row--upper",
+          "id": "carousel__row_upper",
           "label": "Upper Row Styles",
           "default": "inline-block align-middle whitespace-normal flex-[0_0_auto]"
         }
@@ -200,7 +200,7 @@
         },
         {
           "type": "textarea",
-          "id": "carousel__row--lower",
+          "id": "carousel__row_lower",
           "label": "Lower Row Styles",
           "default": "inline-block align-middle whitespace-normal flex-[0_0_auto]"
         }
