--- a/sections/dev__card-OurTeam.liquid
+++ b/sections/dev__card-OurTeam.liquid
@@ -72,7 +72,7 @@
       "type": "text",
       "id": "section_subtitle",
       "label": "Section Subtitle",
-      "default": "Explore the whole collection of open-source web components and elements built with the utility classes from Tailwind"
+      "default": "Have a look at our team!!"
     },
     {
       "type": "number",
