--- a/sections/dev__card-OurTeam.liquid
+++ b/sections/dev__card-OurTeam.liquid
@@ -94,7 +94,7 @@
       "type": "textarea",
       "label": "Card Section Styles",
       "id": "card__main",
-      "default": "bg-white dark:bg-gray-900 py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6"
+      "default": "bg-gray-900 py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6"
     },
     {
       "type": "textarea",
