--- a/sections/dev__image-text.liquid
+++ b/sections/dev__image-text.liquid
@@ -86,7 +86,7 @@
       "type":"text",
       "id":"image-banner-content",
       "label":"Image Content Style",
-      "default":"p-5 flex-1 bg-white bg-opacity-80 z-10 max-md:p-2.5 max-md:flex-col max-md:w-full"
+      "default":"p-16 mt-16 flex-1 bg-white bg-opacity-80 z-10 max-md:p-2.5 max-md:flex-col max-md:w-full max-md:mt-4"
     },
     {
       "type":"text",
