--- a/sections/dev__collage.liquid
+++ b/sections/dev__collage.liquid
@@ -20,7 +20,11 @@
               {% when 'image' %}
                 <div class="collage-card {{ section.settings.collage-card }}">
                   <div class="media media--transparent ratio">
-                    {{ block.settings.image | image_url: width: image_url_width | image_tag: width: image_tag_width }}
+                    {% if block.settings.image %}
+                      {{ block.settings.image | image_url: width: image_url_width | image_tag: width: image_tag_width }}
+                    {% else %}
+                      {{ 'image' | placeholder_svg_tag }}
+                    {% endif %}
                   </div>
                 </div>
                 {% when 'product' %}
@@ -41,8 +45,10 @@
                 {% when 'collection' %}
                 <div class="collection-card {{ section.settings.collection-card }}">
                   <div class="collection">
-                    {% if block.settings.collection %}
+                    {%- if block.settings.collection != blank -%}
                       {{ block.settings.collection | image_url: width: image_url_width | image_tag: width: image_tag_width }}
+                    {% else %}
+                      {{ 'image' | placeholder_svg_tag }}
                     {% endif %}
                     <h3 class="collection__title">{{ block.settings.collection.title }}</h3>
                     <p class="collection__description text-base">{{ block.settings.collection.description }}</p>
