--- a/sections/dev__collage.liquid
+++ b/sections/dev__collage.liquid
@@ -1,49 +1,40 @@
-{% assign section_id = section.id %}
-{% assign section_classes = 'section-' | append: section_id | append: '-padding' %}
-
-<div class="color-{{ section.settings.color_scheme }} gradient isolate">
+  <div class="color-{{ section.settings.color_scheme }} gradient isolate">
   {% if section.settings.heading != blank %}
     <div class="collage-wrapper-title {{ section.settings.collage-wrapper-title }}">
-      <div class="inline-richtext">
         {{ section.settings.heading }}
-      </div>
     </div>
   {% endif %}
-  <div class="page-width {{ section.settings.page-width }}">
-    <div class="collage {{ section.settings.collage }} {% if section.settings.mobile_layout == 'collage' %} collage--mobile{% endif %}">
+  <div class="page-width-styles {{ section.settings.page-width-styles }}">
+    <div class="collage-styles {{ section.settings.collage-styles }} ">
       {% for block in section.blocks %}
-        <div class="items-container">
+        <div class="items-container {{ section.settings.items-container }}">
           {%- assign image_url_width = section.settings.image_url_width -%}
           {%- assign image_tag_width = section.settings.image_tag_width -%}
-          <div class="collage__item {{ section.settings.collage__item }} collage__item--{{ block.type }} collage__item--{{ section.settings.desktop_layout }}">
+          <div class="collage__item {{ section.settings.collage__item }}">
             {% case block.type %}
               {% when 'image' %}
-                <div class="collage-card {{ section.settings.collage-card }}">
-                  <div class="media media--transparent ratio">
+                <div class="collage-card {{ block.settings.collage-card }}">
                     {% if block.settings.image %}
                       {{ block.settings.image | image_url: width: image_url_width | image_tag: width: image_tag_width }}
                     {% else %}
                       {{ 'image' | placeholder_svg_tag }}
                     {% endif %}
-                  </div>
                 </div>
                 {% when 'product' %}
-                <div class="product-card {{ section.settings.product-card }}">
-                  {% if block.settings.second_image %}
-                    {{ block.settings.product | image_url: width: image_url_width | image_tag: width: image_tag_width }}
-                  {% else %}
-                    <div class="product">
-                      <p class="product__title {{ section.settings.product__title }}">{{ block.settings.product.title }}</p>
-                      <p class="product__description {{ section.settings.product__description }}">{{ block.settings.product.description }}</p>
-                      <p class="product__price {{ section.settings.product__price }}">Price: {{ block.settings.product.price | money }}</p>
-                      <p class="product__sku {{ section.settings.product__sku }}">SKU: {{ block.settings.product.sku }}</p>
+                <div class="product-card {{ block.settings.product-card }}">
+                  {% if block.settings.product %}
+                    {% assign product__image-styles = block.settings.product__image-styles %}
+                    {{ block.settings.product | image_url: width: image_url_width | image_tag: width: image_tag_width, class: product__image-styles }}
+                      <p class="product__title {{ block.settings.product__title }}">{{ block.settings.product.title }}</p>
+                      <p class="product__description {{ block.settings.product__description }}">{{ block.settings.product.description }}</p>
+                      <p class="product__price {{ block.settings.product__price }}">Price: {{ block.settings.product.price | money }}</p>
+                      <p class="product__sku {{ block.settings.product__sku }}">SKU: {{ block.settings.product.sku }}</p>
                       <!-- Add more product details as needed -->
-                      <a href="{{ block.settings.product.url }}" class="product__button {{ section.settings.product__button }}">Shop Now</a>
-                    </div>
+                      <a href="{{ block.settings.product.url }}" class="product__button {{ block.settings.product__button }}">Shop Now</a>
                   {% endif %}
                 </div>
                 {% when 'collection' %}
-                <div class="collection-card {{ section.settings.collection-card }}">
+                <div class="collection-card {{ block.settings.collection-card }}">
                   <div class="collection">
                     {%- if block.settings.collection != blank -%}
                       {{ block.settings.collection | image_url: width: image_url_width | image_tag: width: image_tag_width }}
@@ -53,16 +44,15 @@
                     <h3 class="collection__title">{{ block.settings.collection.title }}</h3>
                     <p class="collection__description text-base">{{ block.settings.collection.description }}</p>
                     <!-- Display collection items or details as needed -->
-                    <a href="{{ block.settings.collection.url }}" class="collection__button {{ section.settings.collection__button }}">
+                    <a href="{{ block.settings.collection.url }}" class="collection__button {{ block.settings.collection__button }}">
                       {{- block.settings.collection_text | default: block.settings.collection.title -}}
                     </a>
                   </div>
                 </div>
                 {% when 'video' %}
-                <div class="video-card {{ section.settings.video-card }}">
-                  <div class="media media--transparent ratio">
-                    {{ block.settings.cover_image | image_url: width: image_url_width | image_tag: width: image_tag_width }}
-                  </div>
+                <div class="video-card {{ block.settings.video-card }}">
+                  {% assign video_image-styles = block.settings.video_image-styles %}
+                  {{ block.settings.cover_image | image_url: width: image_url_width | image_tag: width: image_tag_width, class: video_image-styles }}
                   <a href="{{ block.settings.video_url }}" class="collage-card__link"></a>
                 </div>
             {% endcase %}
@@ -151,7 +141,7 @@
     },
     {
       "type": "textarea",
-      "id": "page-width",
+      "id": "page-width-styles",
       "label": "Style Section",
       "default": "flex-col w-[85%] max-w-screen-xl mx-auto p-2  grid grid-row-3 gap-4"
     },
@@ -163,75 +153,21 @@
     },
     {
       "type": "textarea",
-      "id": "collage",
+      "id": "collage-styles",
       "label": "Collage Style Section",
       "default": "flex flex-row flex-wrap justify-between"
+    },
+    {
+      "type": "textarea",
+      "id": "items-container",
+      "label": "Items Container Section",
+      "default": "mt-2"
     },
     {
       "type": "text",
       "id": "collage__item",
       "label": "Collage Item Style Section",
       "default": "flex-row box-border mb-20 w-full"
-    },
-    {
-      "type": "text",
-      "id": "collage-card",
-      "label": "Collage Card Style Section",
-      "default": "bg-white border border-gray-300 rounded-lg w-[30vh] overflow-hidden shadow-md"
-    },
-    {
-      "type": "text",
-      "id": "product-card",
-      "label": "Product Card Style Section",
-      "default": "bg-white border border-gray-300 rounded-lg w-[30vh] overflow-hidden shadow-md p-4"
-    },
-    {
-      "type": "text",
-      "id": "product__title",
-      "label": "Product Title Style Section",
-      "default": "text-xl"
-    },
-    {
-      "type": "text",
-      "id": "product__description",
-      "label": "Product Description Style Section",
-      "default": "text-gray-600 mb-2"
-    },
-    {
-      "type": "text",
-      "id": "product__price",
-      "label": "Product Price Style Section",
-      "default": "text-red-500 mb-2"
-    },
-    {
-      "type": "text",
-      "id": "product__sku",
-      "label": "Product Sku Style Section",
-      "default": "text-gray-500 mb-2"
-    },
-    {
-      "type": "text",
-      "id": "product__button",
-      "label": "Product Button Style Section",
-      "default": "inline-block px-4 py-2 text-base text-center no-underline rounded-md transition duration-300 ease-in-out bg-blue-500 text-white"
-    },
-    {
-      "type": "text",
-      "id": "collection-card",
-      "label": "Collection Card Style Section",
-      "default": "bg-white border border-gray-300 rounded-lg w-[30vh] overflow-hidden shadow-md p-4"
-    },
-    {
-      "type": "text",
-      "id": "collection__button",
-      "label": "Collection Button Style Section",
-      "default": "inline-block px-4 py-2 text-base text-center no-underline rounded-md transition duration-300 ease-in-out bg-green-600 text-white"
-    },
-    {
-      "type": "text",
-      "id": "Video-card",
-      "label": "Video Card Style Section",
-      "default": "bg-white border border-gray-300 rounded-lg w-[30vh] overflow-hidden shadow-md p-4"
     }
   ],
   "blocks": [
@@ -243,6 +179,12 @@
           "type": "image_picker",
           "id": "image",
           "label": "Image"
+        },
+        {
+          "type": "text",
+          "id": "collage-card",
+          "label": "Collage Card Style Section",
+          "default": "bg-white border border-gray-300 rounded-lg w-[30vh] overflow-hidden shadow-md"
         }
       ]
     },
@@ -260,6 +202,48 @@
           "id": "second_image",
           "default": false,
           "label": "Second Image"
+        },
+        {
+          "type": "text",
+          "id": "product-card",
+          "label": "Product Card Style Section",
+          "default": "bg-white border border-gray-300 rounded-lg w-[35vh] overflow-hidden shadow-md p-4"
+        },
+        {
+          "type": "text",
+          "id": "product__image-styles",
+          "label": "Image Style Section",
+          "default": "max-w-none"
+        },
+        {
+          "type": "text",
+          "id": "product__title",
+          "label": "Product Title Style Section",
+          "default": "text-xl"
+        },
+        {
+          "type": "text",
+          "id": "product__description",
+          "label": "Product Description Style Section",
+          "default": "text-gray-600 mb-2"
+        },
+        {
+          "type": "text",
+          "id": "product__price",
+          "label": "Product Price Style Section",
+          "default": "text-red-500 mb-2"
+        },
+        {
+          "type": "text",
+          "id": "product__sku",
+          "label": "Product Sku Style Section",
+          "default": "text-gray-500 mb-2"
+        },
+        {
+          "type": "text",
+          "id": "product__button",
+          "label": "Product Button Style Section",
+          "default": "inline-block px-4 py-2 text-base text-center no-underline rounded-md transition duration-300 ease-in-out bg-blue-500 text-white"
         }
       ]
     },
@@ -277,6 +261,18 @@
           "id": "collection_text",
           "label": "Collection Display Text",
           "info": "Defaults to collection name if empty"
+        },
+        {
+          "type": "text",
+          "id": "collection-card",
+          "label": "Collection Card Style Section",
+          "default": "bg-white border border-gray-300 rounded-lg w-[50vh] overflow-hidden shadow-md p-4 max-md:w-[35vh]"
+        },
+        {
+          "type": "text",
+          "id": "collection__button",
+          "label": "Collection Button Style Section",
+          "default": "inline-block px-4 py-2 text-base text-center no-underline rounded-md transition duration-300 ease-in-out bg-green-600 text-white"
         }
       ]
     },
@@ -296,6 +292,18 @@
           "default": "https://www.youtube.com/watch?v=_9VUPq3SxOc",
           "label": "Video URL",
           "info": "Enter the video URL"
+        },
+        {
+          "type": "text",
+          "id": "video_image-styles",
+          "label": "Image Style Section",
+          "default": "w-[300px] h-[350px]"
+        },
+        {
+          "type": "text",
+          "id": "Video-card",
+          "label": "Video Card Style Section",
+          "default": "bg-white border border-gray-300 rounded-lg w-[30vh] overflow-hidden shadow-md p-4"
         }
       ]
     }
