--- a/sections/dev__card-OurTeam.liquid
+++ b/sections/dev__card-OurTeam.liquid
@@ -39,14 +39,14 @@
 
             <li>
               {% if block.settings.card__block_twitter != blank %}
-                <a href="{{ block.settings.card__block_twitter }}" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
+                <a href="{{ block.settings.card__block_twitter }}" class="{{ block.settings.card__block_ul_links }}">
                   {% render 'icon-twitter' %}
                 </a>
               {% endif %}
             </li>
             <li>
               {% if block.settings.card__block_github != blank %}
-                <a href="{{ block.settings.card__block_github }}" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
+                <a href="{{ block.settings.card__block_github }}" class="{{ block.settings.card__block_ul_links }}">
                   {% render 'icon-github' %}
                 </a>
               {% endif %}
