--- a/sections/dev__multi-column.liquid
+++ b/sections/dev__multi-column.liquid
@@ -1,15 +1,5 @@
 <!-- dev__multi-column.liquid -->
 
-{%- style -%}
-  .multi-column__item {
-    & .multi-column__item-img img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  }
-{%- endstyle -%}
-
 <div class="multi-column {{ section.settings.multi-column }}">
   <h2 class="{{ section.settings.multi-column__section-title }}">
     {{ section.settings.section_title }}
@@ -19,8 +9,9 @@
     {% for block in section.blocks %}
       <div class="multi-column__item {{ section.settings.multi-column__item }}">
         {% if block.settings.image %}
-          <div class="multi-column__item-img {{ section.settings.multi-column__item-img }}">
-            {{ block.settings.image | image_url: width: 200 | image_tag }}
+          <div class="multi-column__item-img-container {{ section.settings.multi-column__item-img-container }}">
+            {{ block.settings.image | image_url: width: 200 | image_tag: alt: 'alt_text',
+                class: section.settings.multi-column__style--item-img }}
           </div>
         {% endif %}
 
@@ -92,9 +83,15 @@
     },
     {
       "type": "text",
-      "id": "multi-column__item-img",
-      "label": "Style Column Item Image",
+      "id": "multi-column__item-img-container",
+      "label": "Style Column Item Image Container",
       "default": "w-full h-[150px] md:h-[200px] overflow-hidden rounded-[10px]"
+    },
+    {
+      "type": "text",
+      "label": "Style Column Item Image",
+      "id": "multi-column__style--item-img",
+      "default": "w-full h-full object-cover"
     },
     {
       "type": "text",
